...
                component.appNavigate(AppConfig.Account)
            }
            PrimaryButton(
                modifier = Modifier
                    .height(50.dp)
                    .weight(1f),
                title = "Moje narudžbe",
                icon = Res.drawable.ic_orders,
                color = KarikaColors.Gray2,
                contentPadding = PaddingValues(4.dp)
            ) {
                component.appNavigate(AppConfig.Orders)
            }
...
                component.appNavigate(AppConfig.AdminMessages)
            }
            PrimaryButton(
                modifier = Modifier
                    .height(50.dp)
                    .weight(1f),
                title = "Poruke dobavljača",
                icon = Res.drawable.ic_navigation_profile,
                color = KarikaColors.Gray2,
                badge = adminCount.value.user(),
                contentPadding = PaddingValues(4.dp)
            ) {
                component.appNavigate(AppConfig.VendorMessages)
...
