...
        horizontalArrangement = Arrangement.spacedBy(10.dp)
    ) {
        KarikaTextField2(
            modifier = Modifier
                .weight(1f),
            value = comment,
            placeholder = "Napiši komentar",
            keyboardType = KeyboardType.Text,
            imeAction = ImeAction.Done,
            // trailingIcons = {
            //     Icon(
            //         modifier = Modifier
            //             .onClick {
...
