...
                    )
                }
            }
            YSpacer16()
            HorizontalButtons(
                primaryTitle = "Naruči ponovo",
                secondaryTitle = "Vidi narudžbu"
            ) {
                if (it == "Vidi narudžbu") {
                    component.navigateDetails(order)
                    return@HorizontalButtons
                }

...
